--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 </head>
   <body class="bg-slate-900 text-white overflow-hidden">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
